--- a/style.css
+++ b/style.css
@@ -87,3 +87,15 @@ a {
 .nav-link:hover {
     color: var(--primary-color);
 }
+.toggle-button {
+    font-size: 21px;
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    right: 0;
+    margin: 8px 10px;
+}
+
+.toggle-button:focus {
+    outline: none;
+}
