Search bar and styling added

--- a/style.css
+++ b/style.css
@@ -94,8 +94,48 @@ a {
     position: absolute;
     right: 0;
     margin: 8px 10px;
+    display: none;
 }
 
 .toggle-button:focus {
     outline: none;
+}
+
+form.search-button input[type=text] {
+    padding: 10px;
+    font-size: 17px;
+    font-family: 'Source Sans Pro', sans-serif;
+    border: 1px solid grey;
+    float: left;
+    width: 80%;
+    background: #f1f1f1;
+}
+
+form.search-button button {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+}
+
+form.search-button:hover {
+    background: #0b7dda;
+}
+
+form.search-button::after { 
+    content: "";
+    clear: both;
+    display: table;
+}
+/* Media Query */
+
+@media(max-width : 574px) {
+    .toggle-button{
+        display: initial;
+    }
 }
