--- a/style.css
+++ b/style.css
@@ -169,6 +169,15 @@ a {
 }
 /* Main Section */
 
+/* Footer */
+
+#footer {
+    padding-top: 4em;
+
+}
+
+/* Footer */
+
 /* Search button */
 form.search-button input[type=text] {
     padding: 10px;
@@ -204,6 +213,26 @@ form.search-button::after {
 /* Search Button */
 /* Media Query */
 
+.row {
+    display: flex;
+}
+
+.col-3 {
+    flex: 0 0 33.333%;
+    max-width: 33.333%;
+    padding-right: 35px;
+}
+
+@media (max-width: 1024px) {
+    .row {
+        flex-wrap: wrap;
+    }
+    .col-3 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+}
+
 @media (max-width: 992px) {
     .navbar{
         flex: column;
@@ -212,6 +241,10 @@ form.search-button::after {
 @media (max-width: 768px) {
     .grid .grid-item {
         width: calc(50% - 20px);
+    }
+    .col-3 {
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 }
 
