--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ a {
     display: flex;
 }
 
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
 .justify-content-center {
     justify-content: center;
 }
@@ -240,6 +244,11 @@ a {
     border-radius: 40px;
     padding: 10px 20px;
     font-size: 15px;
+}
+
+#footer .copyrights {
+    padding: 10px 0;
+    border-top: 2px solid var(--light);
 }
 
 /* Footer */
